style fix(cart):remove overflow from mobile screen sizes

--- a/src/component/Cart-page/cart.module.css
+++ b/src/component/Cart-page/cart.module.css
@@ -1,10 +1,10 @@
 .cartContainer{
-    outline: 1px solid green;
     transform: translateY(65px);
     height: 95vh;
     background-color: #F8F9FA;
     align-content: start;
     gap: 5px;
+    max-width: 100vw;
 
 }
 .totalCost{
@@ -24,7 +24,7 @@
     flex-direction: column;
     justify-self: center;
     margin: 90px;
-    width: 800px;
+    width: min-content;
     border-radius: 25px;
     background-color: #ffff;
     box-shadow: 8px 8px 38px -36px rgba(66, 68, 90, 1);
@@ -36,9 +36,9 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: auto;
-    outline: 4px solid #F8F9FA;
+    
     outline-offset: 4px;
-    width: 700px;
+    width: 600px;
     border-radius: 20px;
     transform: scale(1);
     transition: transform .2s ease-out;
@@ -62,11 +62,40 @@
 .deletItem:hover{
     background-color:#ff1707 ;
     color: #ffff;
-    border-radius:  0px 25px 25px 0px;
+   
     transform: scale(1.1);
 }
-@media (max-width: 610px){
+@media (max-width: 700px){
+
     .listContainer{
-        width: 100vw;
+        width: 100%;
+        
+        display: grid;
+        margin: 0px;
     }
+    .cartItem{
+        grid-template-rows: 1fr 1fr 1fr 1fr;
+        grid-template-columns: auto;
+        justify-items: center;
+        box-shadow: 8px 8px 38px -36px rgb(9, 9, 12);
+        width: 100%;
+        margin: 0;
+        margin-top: 20px;
+        
+        
+
+        
+    }
+    .cartItem:hover{
+        transform: scale(none);
+    }
+    .deletItem{
+        border-radius:  0px 0px 25px 25px;
+    }
+    .deletItem:hover{
+    background-color:#ff1707 ;
+    color: #ffff;
+   
+    transform: scale(1,1.1);
+}
 }
