--- a/src/component/product-card/card.module.css
+++ b/src/component/product-card/card.module.css
@@ -55,3 +55,9 @@
     color: #FFFFFF;
     transform: scale(1 ,1.1);
 }
+@media (max-width: 700px){
+    .photo{
+        width:100vw;
+        height: 100vw;
+    }
+}
